--- a/plus.html
+++ b/plus.html
@@ -55,12 +55,12 @@
             <th>({parseInt(this.props.name)})</th>
             <td>
              
-             {this.state.first}&nbsp;X&nbsp;{this.state.second}=
+             {this.state.first}&nbsp;+&nbsp;{this.state.second}=
             </td>
             <th>({parseInt(this.props.name)+1})</th>
             <td> 
               
-            {this.state.third}&nbsp;X&nbsp;{this.state.f}=
+            {this.state.third}&nbsp;+&nbsp;{this.state.f}=
             </td>  
             </tr>    
             </table>
