--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
   <body>
     <title>수학문제 생성사이트</title>
-    <h1>성심중앙지역아동센터 수학문제 인쇄용 by LJS</h1>
+    <h1>수학문제 인쇄용 by LJS</h1>
 
-    <h1>한자릿수 덧셈</h1>
+    <h1>한 자릿수 덧셈</h1>
     <a href="https://igam94.github.io/PMMD/plus">https://igam94.github.io/PMMD/plus</a>
-    <h1>10의자리 + 10의자리 덧셈</h1>
+    <h1>10의 자리 + 10의 자리 덧셈</h1>
     <a href="https://igam94.github.io/PMMD/2plus">https://igam94.github.io/PMMD/2plus</a>
-    <h1>두자릿수 + 두자릿수 덧셈</h1>
+    <h1>두 자릿수 + 두 자릿수 덧셈</h1>
     <a href="https://igam94.github.io/PMMD/3plus">https://igam94.github.io/PMMD/3plus</a>
-    <h1>한자릿수 곱셉</h1>
+    <h1>한 자릿수 곱셉</h1>
     <a href="https://igam94.github.io/PMMD/multiply">https://igam94.github.io/PMMD/multiply</a>
-    <h1>두자릿수 x 한자릿수 곱셉</h1>
+    <h1>두 자릿수 x 한 자릿수 곱셉</h1>
     <a href="https://igam94.github.io/PMMD/2multiply">https://igam94.github.io/PMMD/2multiply</a>
 
   </body>
