--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <a href="https://igam94.github.io/PMMD/multiply">https://igam94.github.io/PMMD/multiply</a>
     <h1>두 자릿수 x 한 자릿수 곱셉</h1>
     <a href="https://igam94.github.io/PMMD/2multiply">https://igam94.github.io/PMMD/2multiply</a>
+    <h1>두 자릿수 x 두 자릿수 곱셉</h1>
+    <a href="https://igam94.github.io/PMMD/3multiply">https://igam94.github.io/PMMD/3multiply</a>
 
   </body>
 </html>
